@@ -78,6 +78,7 @@ Mejorado ZRCP:
 Mejorada ventana Fuente de Sonido Externa:
 - Mostrar la frecuencia al detectar tono guía o bits 0/1
 - Mostrar cantidad aproximada de bytes leídos
+- Mostrar frecuencia media cuando señal desconocida
 - Permitir activar entrada desde esta ventana
 
 Mejorado máximo de teclas enviado a ZENG/ZENG Online
